# api

./: .dockerignore  .gitattributes  .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  cloudformation_template.json  cloudformation_template.yml  docker-compose.yml  fly.toml  test.js
.github/workflows/: audit.yml  rustci.yml  test.yml
migrations/indexes/: migrate.py
migrations/models/: __init__.py  comment.py
migrations/paths/: environment.yml  migrate.py
src/: db.rs  index.html  lib.rs  main.rs  testutil.rs
src/controllers/: README.md  comments.rs  events.rs  location.rs  mod.rs  now.rs  opengraph.rs  page_events.rs  playback.rs  study.rs  views.rs  ws.rs
src/controllers/opengraph/: mod.rs  tests.rs
src/db/: tests.rs
src/models/: README.md  comments.rs  connect.rs  events.rs  health.rs  location.rs  mod.rs  now.rs  opengraph.rs  playback.rs  quotes.rs  study.rs  views.rs
src/models/comments/: mod.rs  model.rs  protocol.rs
src/models/connect/: tests.rs
src/models/health/: tests.rs
src/models/location/: tests.rs
src/models/opengraph/: tests.rs
src/models/playback/: tests.rs
src/models/quotes/: tests.rs
src/models/views/: mod.rs  (+2 more)
src/protocol/: mod.rs  sse.rs
src/routes/: README.md  comments.rs  connect.rs  events.rs  location.rs  mod.rs  opengraph.rs  quotes.rs  study.rs  views.rs
src/static/: quotes.html  quotes.json  watch-views.html
src/testutil/: tests.rs
tests/: comments.rs  connect.rs  db.rs  health.rs  location.rs  opengraph.rs  playback.rs  quotes.rs  testutil.rs  views.rs
tests/comments/: handlers.rs  model.rs  protocol.rs
tests/common/: mod.rs
tests/opengraph/: model.rs
tests/views/: model.rs  protocol.rs
(+19 files in other folders)
