# DEPENDENCIES

[package]
name = "wsserver"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
mongodb = "3.2.3"
serde = "1.0.219"
futures = "0.3.28"
dotenv = "0.15.0"
actix-web = "4.10.2"
actix-cors = "0.7.1"
env_logger = "0.11.8"
log = "0.4.27"
parking_lot = "0.12.3"
tokio-stream = "0.1.17"
futures-util = "0.3.31"
actix-web-lab = "0.24.1"
bytestring = "1.4.0"
