# DEPENDENCIES

[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
mongodb = "3.3.0"
serde = "1.0.226"
futures = "0.3.31"
dotenv = "0.15.0"
actix-web = "4.11.0"
actix-cors = "0.7.1"
log = "0.4.28"
parking_lot = "0.12.4"
tokio-stream = "0.1.17"
futures-util = "0.3.31"
actix-web-lab = "0.24.3"
bytestring = "1.5.0"
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
rand = "0.8.5"
