# DEPENDENCIES

[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50", features = ["full"] }
mongodb = "3.5.2"
serde = "1.0.226"
futures = "0.3.32"
dotenvy = "0.15.7"
actix-web = "4.13.0"
actix-cors = "0.7.1"
log = "0.4.28"
parking_lot = "0.12.4"
tokio-stream = "0.1.17"
futures-util = "0.3.31"
actix-web-lab = "0.26.0"
bytestring = "1.5.0"
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-subscriber = "0.3.23"
rand = "0.10.0"
actix-ws = "0.4.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", features = [
  "json",
  "form",
  "query",
], default-features = false }
scraper = "0.26"
url = "2"
